Travel::Status::DE::DBRIS 0.21 - Fri Jan 02 2026

    * Formation: Fix uninitialized value warnings

Travel::Status::DE::DBRIS 0.20 - Sun Dec 28 2025

    * Formation::Group: Update carriage name list (patch by Lili Chelsea Urban)
    * Fix a variety of uninitialized value warnings

Travel::Status::DE::DBRIS 0.19 - Sun Dec 14 2025

    * DBRIS->new, ->new-p: Add optional num_vias key
    * Journey: rename train, train_no to trip, trip_no. The former accessors
      are now deprecated and will issue a run-time warning when used.
    * Journey->trip, ->trip_no: Improve handling of combined operator / line
      number prefixes; avoid using trip number as type / line number
    * Journey: New accessors: types, type_at
    * Location: new accessors: operator, trip_type
    * dbris-m: Add -Or / -Oa options (show next stops of all departures)
    * dbris-m: Add --route-entries option
    * dbris-m: Provide more detailed operator information, if available

Travel::Status::DE::DBRIS 0.18 - Mon Nov 17 2025

    * dbris-m: Show trip number changes along the route, if any
    * Journey: Fix ->operator and ->train_no accessors
    * Journey: New accessors: trip_numbers, trip_no_at
    * Location: New accessor: trip_no

Travel::Status::DE::DBRIS 0.17 - Sun Nov 16 2025

    * Journey: New accessors: admin_id, admin_ids, operator, operators
    * New build dependencies: File::Slurp, JSON

Travel::Status::DE::DBRIS 0.16 - Sat Nov 15 2025

    * Formation::Group: Add ICE L and LINT 41; fix CFL KISS detection

Travel::Status::DE::DBRIS 0.15 - Sun Oct 26 2025

    * DBRIS: Add optional "failure_cache" key to new / new_p. This causes
      the module to cache failed requests, thus decreasing the risk of
      running into rate limits when, e.g., requesting carriage formation data
      that is not available upstream.
    * Formation::Group: Update carriage name list (patch by Lili Chelsea Urban)

Travel::Status::DE::DBRIS 0.14 - Fri Sep 19 2025
